[package]
name = "carlo"
description = "A simple interpreted programming language."
license = "MIT"
repository = "https://github.com/hobbsbros/carlo.git"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "carlotk"
path = "src/lib.rs"

[[bin]]
name = "carlo"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
rustyline = "13.0.0"
