[workspace]
resolver = "2"
members = [
    "carlotk",
    "subcommands/repl",
    "subcommands/latex",
    "subcommands/version",
    "subcommands/help",
]

[package]
name = "carlo"
description = "A simple interpreted programming language."
license = "MIT"
repository = "https://github.com/hobbsbros/carlo.git"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "carlo"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
rustyline = "13.0.0"

[dependencies.carlotk]
path = "./carlotk"
package = "carlotk"
version = "1.1.0"

[dependencies.help]
path = "./subcommands/help"
package = "carlo-help"
version = "1.0.0"

[dependencies.latex]
path = "./subcommands/latex"
package = "carlo-latex"
version = "1.0.0"

[dependencies.run]
path = "./subcommands/run"
package = "carlo-run"
version = "1.0.0"

[dependencies.repl]
path = "./subcommands/repl"
package = "carlo-repl"
version = "1.0.0"

[dependencies.version]
path = "./subcommands/version"
package = "carlo-version"
version = "1.0.0"